# soil_respiration_2023

./: README.md
hardware/altium/soil_respiration/: main_board.PcbDoc  main_board.SchDoc  main_board_PcbLib1.PcbLib  main_board_Schlib1.SchLib  soi_respiration_job.OutJob  soil_respiration.PrjPcb
hardware/altium/soil_respiration/Project Outputs for Free Documents/: Status Report.Txt
hardware/altium/soil_respiration/Project Outputs for soil_respiration/: Design Rule Check - main_board.drc  Design Rule Check - main_board.html  Status Report.Txt
hardware/altium/soil_respiration/Project Outputs for soil_respiration/BOM/: Bill of Materials-soil_respiration.xlsx
hardware/altium/soil_respiration/Project Outputs for soil_respiration/Gerber/: main_board.DRR  main_board.EXTREP  main_board.GBL  main_board.GBO  main_board.GBP  main_board.GBS  main_board.GM3  main_board.GTL  main_board.GTO  main_board.GTP  main_board.GTS  main_board.LDP  main_board.REP  main_board.RUL  main_board.apr
hardware/altium/soil_respiration/Project Outputs for soil_respiration/NC Drill/: main_board.TXT
hardware/altium/soil_respiration/Project Outputs for soil_respiration/Pick Place/: Pick Place for main_board.txt
hardware/altium/soil_respiration/__Previews/: main_board.SchDocPreview
software/: CMakeLists.txt  esp32.overlay  prj.conf
software/inc/: ble.c  ble.h  motor.c  motor.h  mqtt.c  mqtt.h  ota.c  ota.h  sensor.c  sensor.h  sockets.c  sockets.h  wifi.c  wifi.h
software/lib/: scd30.c  scd30.h  sensirion_common.c  sensirion_common.h
software/src/: main.c
